Removed old output

--- a/interactive_aligner.ipynb
+++ b/interactive_aligner.ipynb
@@ -6,14 +6,12 @@
    "source": [
     "# Interactive Sequence Aligner\n",
     "\n",
-    "### CS 466 Final Project - Corey Beaver\n",
-    "\n",
-    "Required Imports:\n"
+    "### CS 466 Final Project - Corey Beaver\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +22,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Specify bandwidth *k* and scoring function *delta* below.\n",
+    "- If using randomly generated inputs, specify length of string *n* and similarity score,\n",
+    "   - Similarity score = HammingDistance(s1, s2) / n \n",
+    "- Or supply your own inputs.\n",
+    "   - Note: Banded alignment implementation currently only supports strings of identical lengths"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +40,8 @@
     "k = 3  #bandwidth\n",
     "\n",
     "# --- USE RANDOMLY GENERATED INPUTS ---\n",
-    "n = 100 # length of generated strings\n",
-    "similarity_score = 0.3 # percent similarity for generated strings (Hamming dist(s1, s2) / n)\n",
+    "n = 30\n",
+    "similarity_score = 0.3\n",
     "s1, s2 = generate_dna_sequences(n, similarity_score)\n",
     "\n",
     "# # --- OR SUPPLY OWN INPUTS ---\n",
@@ -50,21 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Global alignment score: 22\n",
+      "Global alignment score: 3\n",
       "Global alignment:\n",
-      "TGGCTTTA-TCGAA-AA--T-GTAGCAGCGCCAG-TGT-GGCTGACATGCCTTCGCAA-AGGGTGGC-TGTGCCGCCCAGC-CTCTGG--ATGAGGTCGGCCAG-T-CACCGTA\n",
-      "TGGCTA-AGTC-AACAACCTTGGAG-ACCGC-ATCTGTTGGC--A-ATGGCTTCG-ATCAGGGTTTAATTTAT-GCC-AGGAC-CGGGGCAA-AGGTTAGC-AGGTTCACGGT-\n",
-      "Banded alignment score (k = 3): 22\n",
+      "TTC--TGAATCAAT-A-G-AGTC-CTTGGGTTGGTGTAATCGGCGGCA-TC-CCGGCG-\n",
+      "TTCGCTGA-T-ACTTATGCA-TCAC--GGAATGCT-TA-TAGA-GGTACTGACCTT-GA\n",
+      "\n",
+      "\n",
+      "Banded alignment score (k = 3): 3\n",
       "Banded alignment (k = 3):\n",
-      "TGGCTTTA-TCGAA-AA--T-GTAGCAGCGCCAG-TGT-GGCTGACATGCCTTCGCAA-AGGGTGGC-TGTGCCGCCCAGC-CTCTGG--ATGAGGTCGGCCAG-T-CACCGTA\n",
-      "TGGCTA-AGTC-AACAACCTTGGAG-ACCGC-ATCTGTTGGC--A-ATGGCTTCG-ATCAGGGTTTAATTTAT-GCC-AGGAC-CGGGGCAA-AGGTTAGC-AGGTTCACGGT-\n"
+      "TTC--TGAATCAAT-A-G-AGTC-CTTGGGTTGGTGTAATCGGCGGCA-TC-CCGGCG-\n",
+      "TTCGCTGA-T-ACTTATGCA-TCAC--GGAATGCT-TA-TAGA-GGTACTGACCTT-GA\n"
      ]
     }
    ],
@@ -73,7 +79,7 @@
     "if n <= 100:\n",
     "    print('Global alignment:')\n",
     "    print(global_alignment)\n",
-    "\n",
+    "print ('\\n')\n",
     "print(f'Banded alignment score (k = {k}): {banded_score}')\n",
     "if n <= 100:\n",
     "    print(f'Banded alignment (k = {k}):')\n",
